<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/LoginEmail"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="#000000"
        android:outlineSpotShadowColor="#040202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_Text" />

    <TextView
        android:id="@+id/SignUpPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login_LoginScreenTitle"
        android:textColor="#004FB1"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password_login_Title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpEmail" />

    <EditText
        android:id="@+id/PasswordLogin"
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/LoginPassword"
        android:inputType="textEmailAddress"
        android:outlineAmbientShadowColor="#000000"
        android:outlineSpotShadowColor="#040202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText" />

    <TextView
        android:id="@+id/Email_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/email_Login_Title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpPage" />

    <ImageView
        android:id="@+id/LeftLogo"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fta_logo" />

    <Button
        android:id="@+id/LoginSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="96dp"
        android:text="SUBMIT"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:backgroundTint="#0039A6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLogin"
        android:onClick="SubmitLogin"/>



</androidx.constraintlayout.widget.ConstraintLayout>